--- a/src/pages/project/Project.css
+++ b/src/pages/project/Project.css
@@ -1,6 +1,6 @@
 .project-details {
   display: grid;
-  width:80vw;
+  width:auto;
   grid-template-columns: 3fr 2fr;
   align-items: start;
   grid-gap: 60px;
