--- a/src/components/OnlineUsers.css
+++ b/src/components/OnlineUsers.css
@@ -1,6 +1,5 @@
 .user-list {
-    width: 20vw;
-    min-width: 250px;
+    min-width: 20vw;
     padding: 30px;
     box-sizing: border-box;
     background: #fbfbfb;
