--- a/src/components/ProjectList.css
+++ b/src/components/ProjectList.css
@@ -3,7 +3,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
     grid-gap: 20px;
-    background-color: lightgreen;
+    /* background-color: lightgreen; */
   }
   .project-list a {
     background-color: #fff;
