--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,23 @@
 .App {
   display: flex;
-} 
-.App .container{
+}
+.App .container {
   flex-grow: 1;
+}
+.app-button {
+  display: none;
+}
 
+@media (max-width: 700px) {
+  .App {
+    display: flex;
+    flex-direction: column;
+  }
+  .container {
+    background-color: brown;
+  }
+
+  .app-button {
+    display: block;
+  }
 }
