--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,10 +1,10 @@
 .navbar {
     width: 100%;
-    padding: 30px 20px;
+    padding: 30px 40px;
     box-sizing: border-box;
-    /* margin-bottom: 80px; */
     background-color:lightcoral;
-    height: 15vh;
+    position: fixed;
+    height:100px;  
   }
   .navbar ul {
     display: flex;
@@ -30,4 +30,41 @@
     color: #333;
     text-decoration: none;
     margin-right: 20px;
+  }
+
+  @media(max-width:500px){
+    .navbar {
+      width: auto;
+      padding: 10px 20px;
+      box-sizing: border-box;
+      background-color:lightcoral;
+      position: fixed;
+      height:100px;  
+    }
+    .navbar ul {
+      display: flex;
+      margin: 0 auto;
+      align-items: center;
+      justify-content: flex-end;
+    }
+    .navbar .logo {
+      font-weight: bold;
+      color: var(--heading-color);
+      letter-spacing: 1px;
+      display: flex;
+      align-items: center;
+      margin-right: auto;
+    }
+    .navbar .logo img {
+      margin-right: 10px;
+      filter: invert(25%);
+      width: 36px;
+      margin-top: -8px;
+    }
+    .navbar a {
+      color: #333;
+      text-decoration: none;
+      margin-right: 20px;
+    }
+
   }
