--- a/src/components/OnlineUsers.css
+++ b/src/components/OnlineUsers.css
@@ -1,36 +1,94 @@
 .user-list {
-    min-width: 20vw;
-    padding: 30px;
+  margin-top: 100px;
+  padding: 30px;
+  box-sizing: border-box;
+  background: yellow;
+  color: var(--heading-color);
+  min-width: 250px;
+}
+
+.user-list-content {
+  position: fixed;
+}
+.user-list h2 {
+  text-align: right;
+  margin-bottom: 40px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #eee;
+  font-size: 1.2em;
+}
+.user-list .user-list-item {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin: 20px auto;
+}
+.user-list .avatar {
+  margin-left: 10px;
+  width: 40px;
+  height: 40px;
+}
+
+/* online users */
+.user-list .online-user {
+  display: inline-block;
+  margin-right: 10px;
+  width: 12px;
+  height: 12px;
+  background: #0ebb50;
+  border-radius: 50%;
+  margin-top: 2px;
+}
+.user-list-button{
+  display: none;
+}
+
+@media (max-width: 700px) {
+  .user-list-button {
+    display: block;
+    width: 100%;
+  }
+  .user-list {
+    position: fixed;
+    top: 150px;
+    padding: 0;
     box-sizing: border-box;
-    background: #fbfbfb;
+    background: yellow;
     color: var(--heading-color);
+    min-width: 200px;
+  }
+
+  .user-list-content {
+    position: relative;
+    display: none;
   }
   .user-list h2 {
-    text-align: right;
-    margin-bottom: 40px;
+    text-align: left;
+    margin-bottom: 10px;
     padding-bottom: 10px;
     border-bottom: 1px solid #eee;
     font-size: 1.2em;
   }
   .user-list .user-list-item {
     display: flex;
-    justify-content: flex-end;
+    flex-direction: row-reverse;
     align-items: center;
-    margin: 20px auto;
+    margin: 10px auto;
   }
   .user-list .avatar {
-    margin-left: 10px;
+    margin-right: 10px;
     width: 40px;
     height: 40px;
   }
-  
+
   /* online users */
   .user-list .online-user {
     display: inline-block;
-    margin-right: 10px;
+    margin-left: 10px;
     width: 12px;
     height: 12px;
     background: #0ebb50;
     border-radius: 50%;
     margin-top: 2px;
   }
+}
