--- a/src/components/ProjectComments.css
+++ b/src/components/ProjectComments.css
@@ -1,61 +1,79 @@
+.project-comments {
+  max-height: calc(100vh - 140px);
+  overflow: auto;
+  padding-right: 20px;
+  /* firefox scrollbar style */
+  scrollbar-width: 20px;
+  scrollbar-color: #fff #e4e4e4;
+}
+
 .project-comments label {
-    margin-bottom: 0px;
-  }
-  .project-comments textarea {
-    min-height: 40px;
-    font-size: 1.5em;
-  }
-  
-  /* comment list */
-  .project-comments h4 {
-    color: var(--heading-color);
+  margin-top: 100px;
+  margin-bottom: 0px;
+}
+.project-comments textarea {
+  min-height: 40px;
+  font-size: 1.5em;
+}
+
+/* comment list */
+.project-comments h4 {
+  color: var(--heading-color);
+}
+.project-comments li {
+  padding: 16px;
+  border-radius: 4px;
+  border: 1px solid #f2f2f2;
+  margin-top: 20px;
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.05);
+  background: #fff;
+}
+.comment-author {
+  display: flex;
+  align-items: center;
+  color: var(--title-color);
+}
+.comment-author .avatar {
+  width: 30px;
+  height: 30px;
+  margin-right: 10px;
+}
+.comment-date {
+  color: var(--text-color);
+  font-size: 0.9em;
+  margin: 4px 0 10px;
+}
+.comment-content {
+  color: var(--text-color);
+  font-size: 0.9em;
+}
+
+/* comments scrollbar */
+
+/* Chrome, Edge, and Safari scrollbar styles */
+.project-comments::-webkit-scrollbar {
+  width: 6px;
+}
+.project-comments::-webkit-scrollbar-track {
+  background: #fff;
+}
+.project-comments::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  border: 3px solid #e4e4e4;
+}
+
+@media(max-width:700px){
+  .project-comments {
+    box-sizing: border-box;
+    width: 100vw;
+    overflow: auto;
+    padding-right: 10px;
+    padding-left: 10px;
+
   }
   .project-comments li {
-    padding: 16px;
-    border-radius: 4px;
-    border: 1px solid #f2f2f2;
-    margin-top: 20px;
-    box-shadow: 3px 3px 5px rgba(0,0,0,0.05);
-    background: #fff;
-  }
-  .comment-author {
-    display: flex;
-    align-items: center;
-    color: var(--title-color);
-  }
-  .comment-author .avatar {
-    width: 30px;
-    height: 30px;
-    margin-right: 10px;
-  }
-  .comment-date {
-    color: var(--text-color);
-    font-size: 0.9em;
-    margin: 4px 0 10px;
-  }
-  .comment-content {
-    color: var(--text-color);
-    font-size: 0.9em;
+    padding: 10px;
+
   }
   
-  /* comments scrollbar */
-  .project-comments {
-    max-height: 800px;
-    overflow: auto;
-    padding-right: 20px;
-    /* firefox scrollbar style */
-    scrollbar-width: 20px;
-    scrollbar-color: #fff #e4e4e4;
-  }
-  /* Chrome, Edge, and Safari scrollbar styles */
-  .project-comments::-webkit-scrollbar {
-    width: 6px;
-  }
-  .project-comments::-webkit-scrollbar-track {
-    background: #fff;
-  }
-  .project-comments::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    border: 3px solid #e4e4e4;
-  }
-  
+}
