--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -1,13 +1,54 @@
 .sidebar {
-    width: 20vw;
-    min-width: 300px;
-    background: var(--primary-color);
-    min-height: 100vh;
-    box-sizing: border-box;
-    position: relative;
-    color: #fff;
-  }
+  margin-top: 100px;
+  min-width: 250px;
+  background: var(--primary-color);
+  box-sizing: border-box;
+  position: relative;
+  color: #fff;
+}
+.sidebar-content {
+  position: fixed;
+  width: inherit;
+}
+.sidebar .user {
+  font-weight: bold;
+  text-align: center;
+  letter-spacing: 1px;
+  padding: 40px 30px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+}
+.sidebar .links {
+  margin-top: 80px;
+  margin-left: 20px;
+}
+.sidebar .links li {
+  margin-top: 10px;
+}
+.sidebar .links a {
+  display: flex;
+  padding: 10px;
+  text-decoration: none;
+  width: 100%;
+  color: #fff;
+  box-sizing: border-box;
+}
+.sidebar .links img {
+  margin-right: 10px;
+  filter: invert(100%);
+}
+.sidebar .links a.active {
+  color: #555;
+  background: var(--bg-color);
+  border-radius: 20px 0 0 20px;
+}
+.sidebar .links .active img {
+  filter: invert(40%);
+}
+
+@media(max-width:700px){
   .sidebar-content {
+    display: flex;
+    flex-direction: row;
     position: fixed;
     width: inherit;
   }
@@ -15,15 +56,15 @@
     font-weight: bold;
     text-align: center;
     letter-spacing: 1px;
-    padding: 40px 30px;
-    border-bottom: 1px solid rgba(255,255,255,0.2);
+    padding: 10px 10px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
   }
   .sidebar .links {
-    margin-top: 80px;
-    margin-left: 20px;
+    margin-top: 0px;
+    margin-left: 0px;
   }
   .sidebar .links li {
-    margin-top: 10px;
+    margin-top: 0px;
   }
   .sidebar .links a {
     display: flex;
@@ -45,3 +86,5 @@
   .sidebar .links .active img {
     filter: invert(40%);
   }
+
+}
