--- a/src/index.css
+++ b/src/index.css
@@ -14,8 +14,8 @@ body {
   font-family: Poppins, sans-serif;
   margin: 0;
   font-size: 1.1em;
-  /* background: var(--bg-color); */
-  background: lightgreen;
+  overflow: hidden;
+  /* background: lightgreen; */
 
 }
 ul, li, p, h1, h2, h3, h4 {
@@ -49,7 +49,7 @@ ul {
 /* forms */
 label {
   display: block;
-  margin: 24px auto;
+  margin: 15px auto;
 }
 label span {
   display: block;
