--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -1,20 +1,20 @@
-.login-container{
-    background-image: url("../../assets/bg_photo.jpg");
-    background-size:cover;
-    background-repeat: no-repeat;
-    height:85vh;
-    align-items: center;
-    flex-direction: column;
-    display: flex;
-    width:100vw;
+.login-container {
+  background-image: url("../../assets/bg_photo.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100vh;
+  align-items: center;
+  flex-direction: column;
+  display: flex;
+  width: 100vw;
 }
 
 .login-form {
-    width: 360px;
-    margin:  auto;
-    padding: 40px;
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    box-shadow: 3px 3px 5px rgba(0,0,0,0.05);
-    background: #fff;
-  }
+  width: 360px;
+  margin: calc((100vh + 100px - 375px)/2) auto;
+  padding: 40px;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.05);
+  background: #fff;
+}
