--- a/src/pages/project/Project.css
+++ b/src/pages/project/Project.css
@@ -1,13 +1,31 @@
 .project-details {
   display: grid;
-  width:auto;
+  width: auto;
   grid-template-columns: 3fr 2fr;
   align-items: start;
-  grid-gap: 60px;
+  grid-gap: 20px;
   padding: 10px;
+  overflow-y: scroll;
+  height: calc(100vh - 145px);
 }
 
-.project-container{
+.project-container {
+  box-sizing: border-box;
+  height: calc(100vh - 100px);
+  margin-top: 100px;
   display: flex;
   flex-direction: row;
+}
+@media (max-width: 700px) {
+  .project-details {
+    display: flex;
+    width: 100vw;
+    flex-direction: column;
+    padding: 10px;
+    background-color: aliceblue;
+  }
+
+  .project-container {
+    margin-top: 190px;
+  }
 }
