--- a/src/pages/signup/Signup.css
+++ b/src/pages/signup/Signup.css
@@ -1,19 +1,20 @@
+.signup-container {
+  background-image: url("../../assets/bg_photo.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100vh;
+  align-items: center;
+  flex-direction: column;
+  display: flex;
+  width: 100vw;
+}
 .auth-form {
-    width: 360px;
-    margin:  auto;
-    padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    box-shadow: 3px 3px 5px rgba(0,0,0,0.05);
-    background: #fff;
-  }
-  .signup-container {
-
-    width:100vw;
-    height:85vh;
-    background-image: url("../../assets/bg_photo.jpg");
-    background-size: cover;
-    align-items: center;
-    flex-direction: column;
-    display: flex;
-  }
+  box-sizing: border-box;
+  width: 500px;
+  margin: calc((100vh + 100px - 531px)/2) auto;
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.05);
+  background: #fff;
+}
