mobile version - issue with scroll bar sorted

--- a/src/pages/create/Create.css
+++ b/src/pages/create/Create.css
@@ -14,6 +14,9 @@
 }
 
 @media(max-width:700px){
+  .create-form {
+    height:calc(100vh - 292px)
+  }
   .create-form-container {
     margin-top: 190px;;
     display: flex;
