--- a/src/pages/dashboard/Dashboard.css
+++ b/src/pages/dashboard/Dashboard.css
@@ -40,8 +40,14 @@
   color: var(--primary-color);
 }
 
-@media(max-width:700px){
-  .dashboard-container  {
-    margin-top: 190px;;
+@media (max-width: 590px) {
+  .dashboard-project-list {
+    height: calc(100vh - 367px);
+  }
+  .project-filter nav {
+    flex-wrap: wrap;
+  }
+  .dashboard-container {
+    margin-top: 190px;
   }
 }
