--- a/src/pages/create/Create.css
+++ b/src/pages/create/Create.css
@@ -5,20 +5,20 @@
   padding: 20px;
   background-color: #9cf;
   overflow-y: scroll;
-  height:calc(100vh - 100px)
+  height: calc(100vh - 100px);
 }
 .create-form-container {
-  margin-top: 100px;;
+  margin-top: 100px;
   display: flex;
   flex-direction: row;
 }
 
-@media(max-width:700px){
+@media (max-width: 700px) {
   .create-form {
-    height:calc(100vh - 292px)
+    height:calc(100vh - 340px)
   }
   .create-form-container {
-    margin-top: 190px;;
+    margin-top: 190px;
     display: flex;
     flex-direction: row;
   }
