--- a/src/components/ProjectComments.css
+++ b/src/components/ProjectComments.css
@@ -1,14 +1,24 @@
 .project-comments {
-  max-height: calc(100vh - 140px);
-  overflow: auto;
-  padding-right: 20px;
+  /* min-width: 500px; */
+
+  /* max-height: calc(100vh - 140px); */
+  /* overflow: auto; */
+  /* padding-right: 20px; */
+  /* firefox scrollbar style */
+  /* scrollbar-width: 20px;
+  scrollbar-color: #fff #e4e4e4; */
+}
+
+.comments-list {
+  overflow-y: scroll;
+  max-height: calc(100vh - 310px);
   /* firefox scrollbar style */
   scrollbar-width: 20px;
   scrollbar-color: #fff #e4e4e4;
 }
 
 .project-comments label {
-  margin-top: 100px;
+  margin-top: 10px;
   margin-bottom: 0px;
 }
 .project-comments textarea {
@@ -65,10 +75,7 @@
 @media(max-width:700px){
   .project-comments {
     box-sizing: border-box;
-    width: 100vw;
-    overflow: auto;
-    padding-right: 10px;
-    padding-left: 10px;
+    width: 100%;
 
   }
   .project-comments li {
