--- a/src/components/ProjectSummary.css
+++ b/src/components/ProjectSummary.css
@@ -32,6 +32,7 @@
   @media (max-width: 700px){
 
     .project-summary {
+      /* display: none; */
       background-color: #fff;
       padding: 30px 10px;
       border-radius: 4px;
