issue with viewport height on mobile 90%completed

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,9 @@
 }
 
 /* base styles */
+
 body {
+  /* height: -webkit-fill-available; */
   font-family: Poppins, sans-serif;
   margin: 0;
   font-size: 1.1em;
